--- a/Server/Tripsters.Infrastructure/Tripsters.Infrastructure.csproj
+++ b/Server/Tripsters.Infrastructure/Tripsters.Infrastructure.csproj
@@ -7,12 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Tripsers.Data\Tripsers.Data.csproj" />
+    <ProjectReference Include="..\Tripsters.Services\Tripsters.Services.csproj" />
   </ItemGroup>
 
 </Project>
