--- a/Client/tripsters/package.json
+++ b/Client/tripsters/package.json
@@ -15,8 +15,10 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.1.1",
@@ -48,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.1"
   }
 }
